--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
             text-align: left;
         }
     </style>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <h1>Google Sheets CRUD Application</h1>
@@ -34,38 +35,33 @@
     <div id="data-view">
         <!-- Dữ liệu từ Google Sheets sẽ hiển thị ở đây -->
     </div>
+    <div id="g_id_onload"
+         data-client_id="36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com"
+         data-context="signin"
+         data-ux_mode="popup"
+         data-callback="handleCredentialResponse"
+         data-auto_prompt="false">
+    </div>
+    <div class="g_id_signin" data-type="standard"></div>
 
     <script src="https://apis.google.com/js/api.js"></script>
     <script>
-        const CLIENT_ID = '36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com';
-        const API_KEY = 'AIzaSyBIYrumhRpzcwz8E8FToH-dMoGfYFYQz90';
+        const API_KEY = 'AIzaSyBhMEs1BDB8efd0MVRtv4u6J8QpILxgqmU';
         const SHEET_ID = '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY';
         const RANGE = 'PNK!A1:H';
 
-        function handleClientLoad() {
-            gapi.load('client:auth2', initClient);
-        }
-
-        function initClient() {
-            gapi.auth2.init({
-                client_id: CLIENT_ID,
-            }).then(() => {
-                if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
-                    loadGapiClient();
-                } else {
-                    gapi.auth2.getAuthInstance().signIn().then(loadGapiClient);
-                }
-            });
-        }
-
-        function loadGapiClient() {
-            gapi.client.init({
-                apiKey: API_KEY,
-                discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
-            }).then(() => {
-                console.log('GAPI client loaded for API');
-            }, (error) => {
-                console.error('Error loading GAPI client for API', error);
+        function handleCredentialResponse(response) {
+            const token = response.credential;
+            gapi.load('client', () => {
+                gapi.client.init({
+                    apiKey: API_KEY,
+                    discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
+                }).then(() => {
+                    gapi.auth.setToken({access_token: token});
+                    console.log('GAPI client loaded for API');
+                }, (error) => {
+                    console.error('Error loading GAPI client for API', error);
+                });
             });
         }
 
@@ -124,8 +120,6 @@
         function deleteData() {
             // Thêm mã để xóa dữ liệu
         }
-
-        handleClientLoad();
     </script>
 </body>
 </html>
