--- a/Index.html
+++ b/Index.html
@@ -46,23 +46,37 @@
 
     <script src="https://apis.google.com/js/api.js"></script>
     <script>
-        const API_KEY = 'AIzaSyBhMEs1BDB8efd0MVRtv4u6J8QpILxgqmU';
+        const CLIENT_ID = '36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com';
+        const CLIENT_SECRET = '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';
+        const TOKEN_URI = 'https://oauth2.googleapis.com/token';
+        const API_KEY = 'AIzaSyBIYrumhRpzcwz8E8FToH-dMoGfYFYQz90';
         const SHEET_ID = '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY';
         const RANGE = 'PNK!A1:H';
         let accessToken;
 
         function handleCredentialResponse(response) {
-            accessToken = response.credential;
-            gapi.load('client', () => {
-                gapi.client.init({
-                    apiKey: API_KEY,
-                    discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
-                }).then(() => {
-                    gapi.client.setToken({access_token: accessToken});
-                    console.log('GAPI client loaded for API');
-                }, (error) => {
-                    console.error('Error loading GAPI client for API', error);
+            const authCode = response.code;
+            fetch(TOKEN_URI, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: `code=${authCode}&client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&redirect_uri=postmessage&grant_type=authorization_code`
+            }).then(response => response.json()).then(tokenResponse => {
+                accessToken = tokenResponse.access_token;
+                gapi.load('client', () => {
+                    gapi.client.init({
+                        apiKey: API_KEY,
+                        discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
+                        accessToken: accessToken
+                    }).then(() => {
+                        console.log('GAPI client loaded for API');
+                    }, (error) => {
+                        console.error('Error loading GAPI client for API', error);
+                    });
                 });
+            }).catch(error => {
+                console.error('Error fetching access token: ', error);
             });
         }
 
