--- a/Index.html
+++ b/Index.html
@@ -1,144 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sheets CRUD</title>
-    <style>
-        /* Thêm CSS của bạn ở đây */
-        #data-form {
-            margin-bottom: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid black;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-    </style>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <title>Google Sheets API Example</title>
 </head>
 <body>
-    <h1>Google Sheets CRUD Application</h1>
-    <div id="data-form">
-        <input type="text" id="data-input" placeholder="Enter data">
-        <button onclick="addData()">Add Data</button>
-        <button onclick="viewData()">View Data</button>
-        <button onclick="updateData()">Update Data</button>
-        <button onclick="deleteData()">Delete Data</button>
-    </div>
-    <div id="data-view">
-        <!-- Dữ liệu từ Google Sheets sẽ hiển thị ở đây -->
-    </div>
-    <div id="g_id_onload"
-         data-client_id="36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com"
-         data-context="signin"
-         data-ux_mode="popup"
-         data-callback="handleCredentialResponse"
-         data-auto_prompt="false">
-    </div>
-    <div class="g_id_signin" data-type="standard"></div>
+    <h1>Google Sheets API Operations</h1>
+    <button onclick="listMajors()">Load Data</button>
+    <button onclick="updateSheet()">Update Cell</button>
+    <pre id="content"></pre>
 
     <script src="https://apis.google.com/js/api.js"></script>
-    <script>
-        const CLIENT_ID = '36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com';
-        const CLIENT_SECRET = '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';
-        const TOKEN_URI = 'https://oauth2.googleapis.com/token';
-        const API_KEY = 'AIzaSyBIYrumhRpzcwz8E8FToH-dMoGfYFYQz90';
-        const SHEET_ID = '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY';
-        const RANGE = 'PNK!A1:H';
-        let accessToken;
-
-        function handleCredentialResponse(response) {
-            const authCode = response.code;
-            fetch(TOKEN_URI, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                },
-                body: `code=${authCode}&client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&redirect_uri=postmessage&grant_type=authorization_code`
-            }).then(response => response.json()).then(tokenResponse => {
-                accessToken = tokenResponse.access_token;
-                gapi.load('client', () => {
-                    gapi.client.init({
-                        apiKey: API_KEY,
-                        discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
-                        accessToken: accessToken
-                    }).then(() => {
-                        console.log('GAPI client loaded for API');
-                    }, (error) => {
-                        console.error('Error loading GAPI client for API', error);
-                    });
-                });
-            }).catch(error => {
-                console.error('Error fetching access token: ', error);
-            });
-        }
-
-        function addData() {
-            const value = document.getElementById('data-input').value;
-            const params = {
-                spreadsheetId: SHEET_ID,
-                range: RANGE,
-                valueInputOption: 'RAW',
-                insertDataOption: 'INSERT_ROWS'
-            };
-
-            const valueRangeBody = {
-                values: [[value]]
-            };
-
-            gapi.client.sheets.spreadsheets.values.append(params, valueRangeBody).then((response) => {
-                console.log(response);
-                viewData(); // Cập nhật dữ liệu sau khi thêm
-            }, (error) => {
-                console.error('Error adding data: ', error);
-            });
-        }
-
-        function viewData() {
-            const params = {
-                spreadsheetId: SHEET_ID,
-                range: RANGE,
-            };
-
-            gapi.client.sheets.spreadsheets.values.get(params).then((response) => {
-                const range = response.result;
-                if (range.values.length > 0) {
-                    let output = '<table><tr>';
-                    range.values[0].forEach((header) => {
-                        output += `<th>${header}</th>`;
-                    });
-                    output += '</tr>';
-                    range.values.slice(1).forEach((row) => {
-                        output += '<tr>';
-                        row.forEach((cell) => {
-                            output += `<td>${cell}</td>`;
-                        });
-                        output += '</tr>';
-                    });
-                    output += '</table>';
-                    document.getElementById('data-view').innerHTML = output;
-                } else {
-                    document.getElementById('data-view').innerHTML = 'No data found.';
-                }
-            }, (error) => {
-                console.error('Error viewing data: ', error);
-            });
-        }
-
-        function updateData() {
-            // Thêm mã để cập nhật dữ liệu
-        }
-
-        function deleteData() {
-            // Thêm mã để xóa dữ liệu
-        }
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
