--- a/Index.html
+++ b/Index.html
@@ -1,169 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Google Sheets API Full Example</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <title>Google Sheets Example</title>
 </head>
 <body>
-    <p>Google Sheets API Example</p>
-    <!--Add buttons to initiate auth sequence and sign out-->
-    <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
-    <button onclick="readData()">Read Data</button>
-    <button onclick="addData()">Add New Row</button>
-    <button onclick="updateData()">Update Row</button>
-
-    <table border="1" id="sheetTable">
-        <thead>
-            <tr>
-                <th>Nghiệp vụ</th>
-                <th>Số phiếu nhập</th>
-                <th>Ngày nhập kho</th>
-                <th>Nhập từ</th>
-                <th>Nhập về kho</th>
-                <th>Diễn giải</th>
-                <th>Chứng từ đi kèm</th>
-                <th>Mã kiện (NB)</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Data rows will go here -->
-        </tbody>
+    <button onclick="handleAuthClick()">Authorize</button>
+    <button onclick="handleSignoutClick()">Sign Out</button>
+    <table id="sheetData">
+        <tr>
+            <th>Name</th>
+            <th>Value</th>
+        </tr>
     </table>
-
-    <pre id="content" style="white-space: pre-wrap;"></pre>
-
-    <script type="text/javascript">
-        const CLIENT_ID = '36866534114-quffe9ok3s05kab59mfuvt0s4a7eqqer.apps.googleusercontent.com';
-        const API_KEY = 'AIzaSyBIYrumhRpzcwz8E8FToH-dMoGfYFYQz90';
-        const DISCOVERY_DOC = 'https://sheets.googleapis.com/$discovery/rest?version=v4';
-        const SCOPES = 'https://www.googleapis.com/auth/spreadsheets';
-        let tokenClient;
-        let gapiInited = false;
-        let gisInited = false;
-
-        document.getElementById('authorize_button').style.visibility = 'hidden';
-        document.getElementById('signout_button').style.visibility = 'hidden';
-
-        function gapiLoaded() {
-            gapi.load('client', initializeGapiClient);
-        }
-
-        async function initializeGapiClient() {
-            await gapi.client.init({
-                apiKey: API_KEY,
-                discoveryDocs: [DISCOVERY_DOC],
-            });
-            gapiInited = true;
-            maybeEnableButtons();
-        }
-
-        function gisLoaded() {
-            tokenClient = google.accounts.oauth2.initTokenClient({
-                client_id: CLIENT_ID,
-                scope: SCOPES,
-                callback: '',
-            });
-            gisInited = true;
-            maybeEnableButtons();
-        }
-
-        function maybeEnableButtons() {
-            if (gapiInited && gisInited) {
-                document.getElementById('authorize_button').style.visibility = 'visible';
-            }
-        }
-
-        function handleAuthClick() {
-            tokenClient.callback = async (resp) => {
-                if (resp.error !== undefined) {
-                    throw (resp);
-                }
-                document.getElementById('signout_button').style.visibility = 'visible';
-                document.getElementById('authorize_button').innerText = 'Refresh';
-                await readData();
-            };
-
-            if (gapi.client.getToken() === null) {
-                tokenClient.requestAccessToken({prompt: 'consent'});
-            } else {
-                tokenClient.requestAccessToken({prompt: ''});
-            }
-        }
-
-        function handleSignoutClick() {
-            const token = gapi.client.getToken();
-            if (token !== null) {
-                google.accounts.oauth2.revoke(token.access_token);
-                gapi.client.setToken('');
-                document.getElementById('content').innerText = '';
-                document.getElementById('authorize_button').innerText = 'Authorize';
-                document.getElementById('signout_button').style.visibility = 'hidden';
-            }
-        }
-
-        async function readData() {
-            try {
-                const response = await gapi.client.sheets.spreadsheets.values.get({
-                    spreadsheetId: '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY',
-                    range: 'PNX!A4:H',
-                });
-                const range = response.result;
-                if (!range || !range.values || range.values.length == 0) {
-                    document.getElementById('content').innerText = 'No values found.';
-                    return;
-                }
-                const table = document.getElementById('sheetTable').getElementsByTagName('tbody')[0];
-                table.innerHTML = ''; // Clear previous data
-                range.values.forEach((row) => {
-                    let newRow = table.insertRow(table.rows.length);
-                    row.forEach((cell) => {
-                        let newCell = newRow.insertCell(newRow.cells.length);
-                        newCell.textContent = cell;
-                    });
-                });
-            } catch (err) {
-                document.getElementById('content').innerText = err.message;
-            }
-        }
-
-        async function addData() {
-            const values = [
-                ["Example Business", "12345", "2020-01-01", "Supplier", "Main Warehouse", "No details", "Invoice 12345", "NB-001"]
-            ];
-            try {
-                const response = await gapi.client.sheets.spreadsheets.values.append({
-                    spreadsheetId: '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY',
-                    range: 'PNX!A:H',
-                    valueInputOption: 'USER_ENTERED',
-                    resource: { values: values }
-                });
-                document.getElementById('content').innerText = 'Row added: ' + JSON.stringify(response.result);
-                await readData();  // Refresh data display
-            } catch (err) {
-                document.getElementById('content').innerText = 'Error: ' + err.message;
-            }
-        }
-
-        async function updateData() {
-            const values = [
-                ["Updated Business", "54321", "2020-02-02", "Supplier Updated", "Warehouse B", "Updated details", "Invoice 54321", "NB-002"]
-            ];
-            try {
-                const response = await gapi.client.sheets.spreadsheets.values.update({
-                    spreadsheetId: '1tzyxVXDZyk7FQtYm8nFYskisu5gdAf2QoV3SoDCzIRY',
-                    range: 'PNX!A2:H2',  // Specify the row to update
-                    valueInputOption: 'USER_ENTERED',
-                    resource: { values: values }
-                });
-                document.getElementById('content').innerText = 'Row updated: ' + JSON.stringify(response.result);
-                await readData();  // Refresh data display
-            } catch (err) {
-                document.getElementById('content').innerText = 'Error: ' + err.message;
-            }
-        }
-    </script>
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-    <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
